--- a/css/coffee.css
+++ b/css/coffee.css
@@ -1,3 +1,4 @@
 body {
-  background-image: 'https://cdn.shopify.com/s/files/1/1086/5518/t/38/assets/index_bg.jpg'
+  background: url("https://cdn.shopify.com/s/files/1/1086/5518/t/38/assets/index_bg.jpg") no-repeat center;
+
 }
